<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_characters_list">

    <fragment
        android:id="@+id/fragment_characters_list"
        android:name="com.gtsl.breakingbad.presentation.characterlist.CharacterListFragment"
        android:label="@string/character_list"
        tools:layout="@layout/fragment_characters_list">
        <action
            android:id="@+id/navToCharacterDetailsFragment"
            app:destination="@id/fragment_character_details" />

    </fragment>
    <fragment
        android:id="@+id/fragment_character_details"
        android:name="com.gtsl.breakingbad.presentation.characterdetails.CharacterDetailsFragment"
        android:label="@string/character_details"
        tools:layout="@layout/fragment_character_details">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

    <dialog
        android:id="@+id/fragment_season_appearance"
        android:name="com.gtsl.breakingbad.presentation.apperance.AppearanceFragment"
        android:label="@string/appearances"
        tools:layout="@layout/fragment_season_appearance">
    </dialog>

</navigation>
